Add authentication, Improve Swagger docs, fix mistake in README.
